# endstone_color_motd

./: LICENSE  README.md  pyproject.toml
src/endstone_color_motd/: __init__.py  color_motd.py  config.toml
